Add custom method example
